Add patients basics
Add patients mapping in user profile, view and controller logic

--- a/ClinicManagement/Views/Shared/_Layout.cshtml
+++ b/ClinicManagement/Views/Shared/_Layout.cshtml
@@ -16,11 +16,14 @@
         <nav id="sidebarMenu" class="collapse d-lg-block sidebar bg-white">
             <div class="position-sticky">
                 <div class="list-group list-group-flush mt-5">
-                    <a href="#" class="list-group-item list-group-item-action active">
+                    <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
                         <span>Main site</span>
                     </a>
-                    <a href="#" class="list-group-item list-group-item-action" aria-current="true">
-                        <span>Something</span>
+                    <a href="/User/Doctors" class="list-group-item list-group-item-action">
+                        <span>Doctors</span>
+                    </a>
+                    <a href="/User/Patients" class="list-group-item list-group-item-action">
+                        <span>Patients</span>
                     </a>
                 </div>
             </div>
