--- a/ClinicManagement/Views/User/Doctors.cshtml
+++ b/ClinicManagement/Views/User/Doctors.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Doctors";
 }
 
-<table class="table">
+<table class="stripe" id="dataTable">
     <thead>
         <tr>
             <th>
@@ -29,3 +29,9 @@
         }
     </tbody>
 </table>
+
+@section Scripts{
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/datatables.net/jquery.dataTables.min.js"></script>
+    <script src="~/js/datatable.js"></script>
+}
