Add admin panel and users management list
Add admin panel with edit users link, list with users, modals with delete confirmation and modify id properties in viewmodels

--- a/ClinicManagement/Views/Shared/_Layout.cshtml
+++ b/ClinicManagement/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                     <a href="/User/Patients" class="list-group-item list-group-item-action">
                         <span>Patients</span>
                     </a>
+                    <a href="/User/Panel" class="list-group-item list-group-item-action">
+                        <span>Admin panel</span>
+                    </a>
                 </div>
             </div>
         </nav>
