--- a/ClinicManagement/Views/Account/Login.cshtml
+++ b/ClinicManagement/Views/Account/Login.cshtml
@@ -1,35 +1,40 @@
 ﻿@model ClinicManagement.Models.UserLoginViewModel
 
-<h1>Login</h1>
-<hr />
-
-<div class="row">
-    <div class="col-md-4">
-        @using (Html.BeginForm("Login", "Account", FormMethod.Post))
-        {
-            <div class="form-group">
-                @Html.LabelFor(m => m.UserName)
-                @Html.EditorFor(m => m.UserName, new { htmlAttributes = new { @class = "form-control", placeholder = "Username" } })
-                @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
+<div class="login-container">
+    <div class="login-box-container">
+        <div class="box-right">
+        </div>
+        <div class="box-left">
+            <div class="form-title">
+                <h2>Welcome in clinic!</h2>
+                <h4>Please login to your account</h4>
             </div>
-
-            <div class="form-group">
-                @Html.LabelFor(m => m.Password)
-                @Html.EditorFor(m => m.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "Password" } })
-                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-            </div>
-
-            <div class="form-group">
-                <button type="submit" class="btn btn-primary col-3">Login</button>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    <div class="form-outline text-center text-danger">
-                        @Html.ValidationSummary()
-                    </div>
+            @using (Html.BeginForm("Login", "Account", FormMethod.Post))
+            {
+                <div class="form-input-container">
+                    @Html.EditorFor(m => m.UserName, new { htmlAttributes = new { placeholder = "Username" } })<br />
+                    @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
                 </div>
-            </div>
-        }
+                <div class="form-input-container">
+                    @Html.EditorFor(m => m.Password, new { htmlAttributes = new { placeholder = "Password" } })<br />
+                    @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                </div>
+                <div class="form-input-container">
+                    <button type="submit" class="btn btn-primary col-3">Login</button>
+                </div>
+
+                <div class="form-outline text-center text-danger">
+                    @Html.ValidationSummary()
+                </div>
+            }
+        </div>
     </div>
 </div>
+
+
+
+
+
+
+
+
