--- a/ClinicManagement/wwwroot/css/site.css
+++ b/ClinicManagement/wwwroot/css/site.css
@@ -5,19 +5,25 @@
     top: 0;
     bottom: 0;
     left: 0;
-    padding: 58px 0 0; /* Height of navbar */
+    padding: 58px 0 0;
     box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
-    width: 240px;
-    z-index: 600;
+    width: 300px;
+    z-index: 500;
+    font-size: 20px;
 }
 
 
-    .sidebar .active {
-        border-radius: 5px;
-        -webkit-box-shadow: 0px 0px 7px 0px rgba(66, 68, 90, 1);
-        -moz-box-shadow: 0px 0px 7px 0px rgba(66, 68, 90, 1);
-        box-shadow: 0px 0px 4px 0px rgba(66, 68, 90, 1);
-    }
+.sidebar .active {
+    border-radius: 5px;
+    -webkit-box-shadow: 0px 0px 7px 0px rgba(66, 68, 90, 1);
+    -moz-box-shadow: 0px 0px 7px 0px rgba(66, 68, 90, 1);
+    box-shadow: 0px 0px 4px 0px rgba(66, 68, 90, 1);
+}
+
+.decoration-icon {
+    width: 15px;
+    margin-right: 10px;
+}
 
 
 /* Main */
@@ -30,4 +36,210 @@
 
 main {
     margin-top: 80px;
+}
+
+
+/* Login */
+
+.login-container {
+    height: 100vh;
+    background-image: url("../img/login_background.jpg");
+    background-size: cover;
+    padding-top: 5rem;
+    display: flex;
+    justify-content: center;
+}
+
+.login-box-container {
+    height: 40rem;
+    width: 80rem;
+    margin-top: 12rem;
+    border-radius: 2rem;
+    display: flex;
+    -webkit-box-shadow: 2px 8px 24px 0px rgba(66, 68, 90, 1);
+    -moz-box-shadow: 2px 8px 24px 0px rgba(66, 68, 90, 1);
+    box-shadow: 2px 8px 24px 0px rgba(66, 68, 90, 1);
+}
+
+.box-right {
+    width: 50%;
+    background-image: url("../img/login-main.jpg");
+    background-size: cover;
+    background-position: center;
+    border-radius: 2rem 0 0 2rem;
+}
+
+.box-left {
+    width: 50%;
+    background-color: white;
+    
+    border-radius: 0 2rem 2rem 0;
+}
+
+    .box-left .form-title {
+        padding-top: 6rem;
+        text-align: center;
+    }
+
+        .box-left .form-title h4 {
+            margin-top: 1rem;
+            padding-bottom: 2rem;
+        }
+
+    .box-left form {
+        text-align: center;
+        margin-top: 2rem;
+    }
+
+.form-input-container input {
+    width: 20rem;
+    height: 3rem;
+    margin-top: 2rem;
+    border-radius: 1rem;
+}
+
+    .form-input-container input:focus {
+        box-shadow: 0 0 8pt 4pt #D3D3D3;
+    }
+
+.form-input-container button {
+    width: 15rem;
+    height: 3rem;
+    margin-top: 2rem;
+}
+.form-input-container button:hover {
+    box-shadow: 0 0 5pt 2pt #D3D3D3;
+}
+
+
+
+@media (max-width: 1400px) {
+    .login-box-container {
+        height: 30rem;
+        width: 60rem;
+        margin-top: 12rem;
+    }
+
+    .box-left .form-title {
+        padding-top: 3rem;
+    }
+
+        .box-left .form-title h4 {
+            margin-top: 1rem;
+        }
+
+    .box-left form {
+        text-align: center;
+        margin-top: 2rem;
+    }
+
+    .form-input-container input {
+        width: 20rem;
+        height: 3rem;
+        margin-top: 1rem;
+    }
+
+    .form-input-container button {
+        width: 15rem;
+        height: 3rem;
+        margin-top: 2rem;
+    }
+}
+
+
+@media (max-width: 900px) {
+    .login-box-container {
+        height: 20rem;
+        width: 40rem;
+        margin-top: 12rem;
+    }
+
+    .box-left .form-title {
+        padding-top: 1rem;
+    }
+
+        .box-left .form-title h2 {
+            margin-top: 1rem;
+            font-size: 2rem;
+        }
+
+        .box-left .form-title h4 {
+            margin-top: 1rem;
+            font-size: 1rem;
+        }
+
+    .box-left form {
+        margin-top: -1.5rem;
+        height: 8rem;
+    }
+
+    .form-input-container input {
+        width: 12rem;
+        height: 2rem;
+        margin-top: 1.5rem;
+    }
+
+    .form-input-container button {
+        width: 10rem;
+        height: 2rem;
+        margin-top: 1.5rem;
+    }
+}
+
+@media (max-width: 650px) {
+    .login-box-container {
+        height: 50rem;
+        width: 20rem;
+        margin-top: 1rem;
+        border-radius: 2rem;
+        display: block;
+    }
+
+    .box-right {
+        width: 100%;
+        height: 25%;
+        background-image: url("../img/login-main.jpg");
+        background-size: cover;
+        background-position: center;
+        border-radius: 2rem 2rem 0 0;
+    }
+
+    .box-left {
+        width: 100%;
+        background-color: white;
+        border-radius: 0 0 2rem 2rem;
+    }
+
+        .box-left .form-title {
+            text-align: center;
+        }
+
+            .box-left .form-title h2 {
+                margin: 0;
+                font-size: 1.5rem;
+            }
+
+            .box-left .form-title h4 {
+                margin-top: 0.5rem;
+                font-size: 1rem;
+            }
+
+        .box-left form {
+            margin-top: -2rem;
+            text-align: center; 
+        }
+
+    .form-input-container input {
+        width: 12rem;
+        height: 1.5rem;
+        margin-top: 0.5rem;
+    }
+
+    .form-input-container button {
+        width: 10rem;
+        height: 2rem;
+        line-height: 2px;
+        margin-top: 0.5rem;
+        font-size: 1rem;
+    }
 }
