--- a/ClinicManagement/Views/User/Panel.cshtml
+++ b/ClinicManagement/Views/User/Panel.cshtml
@@ -1,1 +1,14 @@
-﻿<a href="/User/Manage" type="button">Manage users</a>
+﻿<div class="main-container">
+    <div class="table-box">
+        <a href="/User/Manage">
+            <div class="tile">
+                Manage users
+            </div>
+        </a>
+    </div>
+</div>
+
+@section Styles {
+    <link href="@Url.Content("~/css/panel.css")" rel="stylesheet" type="text/css" />
+}
+
