--- a/ClinicManagement/Views/User/Edit.cshtml
+++ b/ClinicManagement/Views/User/Edit.cshtml
@@ -1,49 +1,52 @@
 ﻿@model ClinicManagement.Models.UserEditViewModel
 
-<h1>Edit</h1>
-<hr />
+<div class="main-container">
+    <div class="table-box">
+        <div class="edit-box">
+            @using (Html.BeginForm("Edit", "User", FormMethod.Post))
+            {
+                @Html.HiddenFor(u => u.UserId);
 
-<div class="row">
-    <div class="col-md-4">
-        @using (Html.BeginForm("Edit", "User", FormMethod.Post))
-        {
-            @Html.HiddenFor(u => u.UserId);
+                <div class="form-group">
+                    @Html.LabelFor(m => m.UserName)
+                    @Html.EditorFor(m => m.UserName, new { htmlAttributes = new { @class = "form-control", placeholder = "Username" } })
+                    @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
+                </div>
 
-            <div class="form-group">
-                @Html.LabelFor(m => m.UserName)
-                @Html.EditorFor(m => m.UserName, new { htmlAttributes = new { @class = "form-control", placeholder = "Username" } })
-                @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
-            </div>
+                <div class="form-group mt-3">
+                    @Html.LabelFor(m => m.FirstName)
+                    @Html.EditorFor(m => m.FirstName, new { htmlAttributes = new { @class = "form-control", placeholder = "First name" } })
+                    @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
+                </div>
 
-            <div class="form-group">
-                @Html.LabelFor(m => m.FirstName)
-                @Html.EditorFor(m => m.FirstName, new { htmlAttributes = new { @class = "form-control", placeholder = "First name" } })
-                @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
-            </div>
+                <div class="form-group mt-3">
+                    @Html.LabelFor(m => m.LastName)
+                    @Html.EditorFor(m => m.LastName, new { htmlAttributes = new { @class = "form-control", placeholder = "Last name" } })
+                    @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
+                </div>
 
-            <div class="form-group">
-                @Html.LabelFor(m => m.LastName)
-                @Html.EditorFor(m => m.LastName, new { htmlAttributes = new { @class = "form-control", placeholder = "Last name" } })
-                @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
-            </div>
+                <div class="form-group mt-3">
+                    @Html.LabelFor(m => m.PhoneNumber)
+                    @Html.EditorFor(m => m.PhoneNumber, new { htmlAttributes = new { @class = "form-control", placeholder = "PhoneNumber" } })
+                    @Html.ValidationMessageFor(m => m.PhoneNumber, "", new { @class = "text-danger" })
+                </div>
 
-            <div class="form-group">
-                @Html.LabelFor(m => m.PhoneNumber)
-                @Html.EditorFor(m => m.PhoneNumber, new { htmlAttributes = new { @class = "form-control", placeholder = "PhoneNumber" } })
-                @Html.ValidationMessageFor(m => m.PhoneNumber, "", new { @class = "text-danger" })
-            </div>
+                <div class="form-group text-center pt-4">
+                    <button type="submit" class="btn btn-primary col-3">Edit</button>
+                </div>
 
-            <div class="form-group">
-                <button type="submit" class="btn btn-primary col-3">Edit</button>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    <div class="form-outline text-center text-danger">
-                        @Html.ValidationSummary()
+                <div class="row">
+                    <div class="col">
+                        <div class="form-outline text-center text-danger">
+                            @Html.ValidationSummary()
+                        </div>
                     </div>
                 </div>
-            </div>
-        }
+            }
+        </div>
     </div>
 </div>
+
+@section Styles {
+    <link href="@Url.Content("~/css/edit.css")" rel="stylesheet" type="text/css" />
+}
