Add profile informations functionality
Add action, view and viewmodel that display info about currently logged user

--- a/ClinicManagement/wwwroot/css/site.css
+++ b/ClinicManagement/wwwroot/css/site.css
@@ -1,5 +1,14 @@
-﻿/* Sidebar */
+﻿/* Navbar */
 
+.profile-circle {
+    width: 2rem;
+    height: 2rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+}
+
+
+/* Sidebar */
 .sidebar {
     position: fixed;
     top: 0;
