--- a/ClinicManagement/Views/Shared/_LoginPartial.cshtml
+++ b/ClinicManagement/Views/Shared/_LoginPartial.cshtml
@@ -2,10 +2,10 @@
 {
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Photo
+            @User.Identity.Name<div class="bg-dark rounded-circle profile-circle"></div>
         </a>
         <ul class="dropdown-menu dropdown-menu-end">
-            <li><a class="dropdown-item" href="#">Settings</a></li>
+            <li><a class="dropdown-item" href="/User/Profile">Profile info</a></li>
             <li><a class="dropdown-item" href="/Account/Logout">Logout</a></li>
         </ul>
     </li>
