--- a/ClinicManagement/Views/Shared/_Layout.cshtml
+++ b/ClinicManagement/Views/Shared/_Layout.cshtml
@@ -23,24 +23,32 @@
                         <a href="/Home/Index" class="list-group-item list-group-item-action active" aria-current="true">
                             <span>Main site</span>
                         </a>
+
                         @if (User.IsInRole("Patient") || User.IsInRole("Administrator"))
                         {
                             <a href="/User/Doctors" class="list-group-item list-group-item-action">
                                 <span><img src="~/img/stethoscope.svg" class="decoration-icon" />Doctors</span>
                             </a>
                         }
+
                         @if (User.IsInRole("Doctor") || User.IsInRole("Administrator"))
                         {
                             <a href="/User/Patients" class="list-group-item list-group-item-action">
                                 <span><img src="~/img/following.svg" class="decoration-icon" />Patients</span>
                             </a>
                         }
+
+                        <a href="/Appointment/Index" class="list-group-item list-group-item-action">
+                            <span><img src="~/img/stethoscope.svg" class="decoration-icon" />Appointments</span>
+                        </a>
+
                         @if (User.IsInRole("Administrator"))
                         {
                             <a href="/User/Panel" class="list-group-item list-group-item-action">
                                 <span><img src="~/img/document.svg" class="decoration-icon" />Admin panel</span>
                             </a>
                         }
+
                     </div>
                 </div>
             </nav>
