--- a/ClinicManagement/wwwroot/css/profile.css
+++ b/ClinicManagement/wwwroot/css/profile.css
@@ -10,6 +10,7 @@
 
 .profile-box {
     width: 100%;
+    min-width: 670px;
     margin-top: 10rem;
     height: fit-content;
     background-color: white;
@@ -32,6 +33,7 @@
 
 .table-box {
     width: 100%;
+    min-width: 670px;
     height: fit-content;
     background-color: white;
     padding: 5rem;
@@ -41,10 +43,38 @@
 
 #dataTable_wrapper {
     width: 100%;
-    min-width: 435px;
 }
 
     #dataTable_wrapper table th {
         background-color: #0d6efd;
         color: white;
     }
+
+
+@media (max-width: 1350px) {
+
+    .profile-box {
+        justify-content: space-between;
+        padding: 2rem;
+    }
+
+        .profile-box .profile-picture {
+            margin-top: 2rem;
+            width: 150px;
+            height: 150px;
+            background-color: black;
+        }
+
+        .profile-box .profile-info table td {
+            text-align: right;
+            padding-right: 3rem;
+        }
+}
+
+@media (max-width: 1100px) {
+
+    .profile-box {
+        justify-content: space-between;
+        padding: 2rem;
+    }
+}
