Add profile pictures functionality
Move icons to img/icons folder, create profiles folder with profile images, display profile images depends on user

--- a/ClinicManagement/Views/Shared/_Layout.cshtml
+++ b/ClinicManagement/Views/Shared/_Layout.cshtml
@@ -27,25 +27,25 @@
                         @if (User.IsInRole("Patient") || User.IsInRole("Administrator"))
                         {
                             <a href="/User/Doctors" class="list-group-item list-group-item-action">
-                                <span><img src="~/img/stethoscope.svg" class="decoration-icon" />Doctors</span>
+                                <span><img src="~/img/icons/stethoscope.svg" class="decoration-icon" />Doctors</span>
                             </a>
                         }
 
                         @if (User.IsInRole("Doctor") || User.IsInRole("Administrator"))
                         {
                             <a href="/User/Patients" class="list-group-item list-group-item-action">
-                                <span><img src="~/img/following.svg" class="decoration-icon" />Patients</span>
+                                <span><img src="~/img/icons/following.svg" class="decoration-icon" />Patients</span>
                             </a>
                         }
 
                         <a href="/Appointment/Index" class="list-group-item list-group-item-action">
-                            <span><img src="~/img/stethoscope.svg" class="decoration-icon" />Appointments</span>
+                            <span><img src="~/img/icons/stethoscope.svg" class="decoration-icon" />Appointments</span>
                         </a>
 
                         @if (User.IsInRole("Administrator"))
                         {
                             <a href="/User/Panel" class="list-group-item list-group-item-action">
-                                <span><img src="~/img/document.svg" class="decoration-icon" />Admin panel</span>
+                                <span><img src="~/img/icons/document.svg" class="decoration-icon" />Admin panel</span>
                             </a>
                         }
 
