--- a/ClinicManagement/Views/User/Profile.cshtml
+++ b/ClinicManagement/Views/User/Profile.cshtml
@@ -6,7 +6,7 @@
 
 <div class="main-container">
     <div class="profile-box">
-        <div class="rounded-circle profile-picture"></div>
+        <div class="rounded-circle profile-picture" style="background-image: url('@Url.Content("~/img/profiles/"+User.Identity.Name+".jpg")')"></div>
         <div class="profile-info">
             <table>
                 <tr>
