--- a/ClinicManagement/wwwroot/css/appointments.css
+++ b/ClinicManagement/wwwroot/css/appointments.css
@@ -1,28 +1,69 @@
-﻿.main-container {
+﻿/* Index */
+
+.main-container {
     height: 100vh;
     min-height: 750px;
-    display: flex;
-    justify-content: center;
     margin-left: 2rem;
     margin-right: 2rem;
     min-width: 340px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.options-box {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.options-items {
+    display: flex;
+    align-items: center;
+}
+.options-box > a {
+    width: 200px;
+    height: 100px;
 }
 
 .table-box {
     width: 100%;
-    min-width: 650px;
-    margin-top: 10rem;
+    min-width: 750px;
     height: fit-content;
     background-color: white;
-    padding: 5rem;
+    margin-top: 10rem;
+    padding: 2rem 5rem 5rem 5rem;
 }
 
 #dataTable_wrapper {
     width: 100%;
     min-width: 435px;
+    margin-top: 1rem;
 }
 
     #dataTable_wrapper table th {
         background-color: #0d6efd;
         color: white;
     }
+
+
+/* Create */
+
+.filters-box {
+    width: 100%;
+    min-width: 750px;
+    height: fit-content;
+    background-color: white;
+    margin-top: 10rem;
+    padding: 5rem;
+}
+
+    .filters-box > form {
+        display: flex;
+        justify-content: space-around;
+    }
+
+.form-select {
+    width: 200px;
+}
