--- a/ClinicManagement/Views/User/Doctors.cshtml
+++ b/ClinicManagement/Views/User/Doctors.cshtml
@@ -6,6 +6,14 @@
 
 <div class="main-container">
     <div class="table-box">
+        @if (User.IsInRole("Patient"))
+        {
+            <div class="options-box">
+                <div class="options-items">
+                    @Html.ActionLink("Make an appointment", "Create", "Appointment", null, new { @class = "btn btn-primary" })
+                </div>
+            </div>
+        }
         <table class="stripe" id="dataTable">
             <thead>
                 <tr>
@@ -21,30 +29,25 @@
                     <th>
                         @Html.DisplayNameFor(model => model.PhoneNumber)
                     </th>
-                    <th>
-                    </th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var item in Model)
                 {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.FirstName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.LastName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Specialties)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.PhoneNumber)
-                    </td>
-                    <td>
-                        @Html.ActionLink("Make an appointment", "Create", "Appointment", new { doctorId = item.DoctorId }, new { @class = "btn btn-primary" })
-                    </td>
-                </tr>
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.FirstName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.LastName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Specialties)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.PhoneNumber)
+                        </td>
+                    </tr>
                 }
             </tbody>
         </table>
