--- a/ClinicManagement/wwwroot/css/doctors.css
+++ b/ClinicManagement/wwwroot/css/doctors.css
@@ -8,12 +8,30 @@
     min-width: 340px;
 }
 
+.options-box {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+    .options-box > a {
+        width: 200px;
+        height: 100px;
+    }
+
+.options-items {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5rem;
+}
+
 .table-box {
     width: 100%;
     min-width: 750px;
-    margin-top: 10rem;
     height: fit-content;
     background-color: white;
+    margin-top: 10rem;
     padding: 5rem;
 }
 
